[package]
name = "hermit"
version = "0.0.1"
authors = ["Geoff Shannon <geoffpshannon@gmail.com>",
           "Reilly Tucker Siemens <reilly.siemens@gmail.com>",
           "Joe Houng <sjhoung@gmail.com>",
           "Aaron Griffin <aig787@gmail.com>"]
description = "A home directory configuration management assistant."
homepage = "https://bike-barn.github.io/hermit"
repository = "https://github.com/bike-barn/hermit"
readme = "README.md"
keywords = ["home", "directory", "configuration", "management", "dotfiles"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
clap = "~2.32.0"
dirs = "1.0"
failure = "~0.1.1"
failure_derive = "~0.1.1"
git2 = "~0.8.0"
walkdir = "~2.2.7"

[dev-dependencies]
lazy_static = "~1.3.0"

