[package]
name = "hermit"
version = "0.0.1"
authors = ["Zephyr Shannon <earthlingzephyr@gmail.com>",
           "Reilly Tucker Siemens <reilly.siemens@gmail.com>",
           "Joe Houng <sjhoung@gmail.com>",
           "Aaron Griffin <aig787@gmail.com>"]
description = "A home directory configuration management assistant."
homepage = "https://bike-barn.github.io/hermit"
repository = "https://github.com/bike-barn/hermit"
readme = "README.md"
keywords = ["home", "directory", "configuration", "management", "dotfiles"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
clap = "2.33.3"
dirs = "3.0.1"
failure = "0.1.8"
failure_derive = "0.1.8"
git2 = "0.13.13"
walkdir = "2.3.1"

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.1.0"
